--- a/web/src/app/components/paid-chat-chart/paid-chat-chart.html
+++ b/web/src/app/components/paid-chat-chart/paid-chat-chart.html
@@ -5,6 +5,8 @@
 </hs-sub-menu>
 
 <div class="paid-chat-chart">
+  <div class="caption">{{ sum | number }} items - sum</div>
+
   <svg
     class="bars"
     [attr.width]="width"
