--- a/web/src/app/components/paid-chat-chart/paid-chat-chart.scss
+++ b/web/src/app/components/paid-chat-chart/paid-chat-chart.scss
@@ -22,6 +22,12 @@
     fill: rgba(255, 255, 255, 0.9);
     text-anchor: end;
   }
+
+  .caption {
+    padding-right: 16px;
+    padding-left: 16px;
+    padding-bottom: 12px;
+  }
 }
 
 .paid-chat-popper {
