--- a/web/src/app/components/live-chat/live-chat.scss
+++ b/web/src/app/components/live-chat/live-chat.scss
@@ -37,7 +37,7 @@
 
 .live-chat-popper {
   position: absolute;
-
+  min-width: 200px;
   color: black;
   border-radius: 4px;
   background: rgb(255, 255, 255);
@@ -46,31 +46,36 @@
   padding-left: 12px;
   padding-right: 12px;
 
+  table {
+    width: 100%;
+    border: none;
+  }
+
   .title {
     font-size: 11px;
     color: #80868b;
     padding-bottom: 4px;
+    font-weight: 500;
   }
 
   .label {
     color: #424242;
     font-size: 13px;
     line-height: 20px;
-  }
-
-  .count,
-  .amount {
-    font-size: 13px;
-    line-height: 20px;
-    text-align: right;
+    font-weight: 400;
   }
 
   .count {
-    padding-left: 24px;
+    font-size: 13px;
+    line-height: 20px;
+    text-align: right;
+    font-weight: 500;
   }
 
   .hint {
     color: rgba(0, 0, 0, 0.6);
     font-size: 11px;
+    padding-top: 4px;
+    font-weight: 500;
   }
 }
