--- a/web/src/app/components/paid-chat-chart/_paid-chat-chart-theme.scss
+++ b/web/src/app/components/paid-chat-chart/_paid-chat-chart-theme.scss
@@ -16,6 +16,10 @@
     .v.label {
       fill: mat.get-color-from-palette($foreground, "secondary-text");
     }
+
+    .caption {
+      color: mat.get-color-from-palette($foreground, "secondary-text");
+    }
   }
 }
 
@@ -24,6 +28,11 @@
     .label {
       font-size: mat.font-size($config, "caption");
       font-weight: mat.font-weight($config, "body-2");
+    }
+
+    .caption {
+      font-size: mat.font-size($config, "body-1");
+      font-weight: mat.font-weight($config, "body-1");
     }
   }
 
