feat(web): update paid-chat-chart

--- a/web/src/app/components/paid-chat-chart/paid-chat-chart.scss
+++ b/web/src/app/components/paid-chat-chart/paid-chat-chart.scss
@@ -1,4 +1,8 @@
 .paid-chat-chart {
+  .bar {
+    fill: #b5204b;
+  }
+
   .x.label {
     text-anchor: middle;
     font-family: "Fira Code", monospace;
