--- a/web/src/app/components/paid-chat-chart/paid-chat-chart.html
+++ b/web/src/app/components/paid-chat-chart/paid-chat-chart.html
@@ -8,11 +8,12 @@
   <div class="caption">{{ sum | number }} items - sum</div>
 
   <svg
+    #svg
     class="bars"
     [attr.width]="width"
     [attr.height]="topMargin + items.length * (innerPadding + barHeight) + bottomMargin"
     (mousemove)="_handleMousemove($event)"
-    (mouseleave)="_handleMouseleave()"
+    (mouseleave)="closePopper()"
   >
     <ng-container *ngFor="let value of xScale.ticks(8)">
       <line
@@ -33,25 +34,27 @@
       </text>
     </ng-container>
 
-    <ng-container *ngFor="let item of items; index as i; trackBy: trackBy">
+    <g
+      *ngFor="let item of items; index as i; trackBy: trackBy"
+      [ngStyle]="{ opacity: (popper.idx === -1 || popper.idx === i) ? 1 : 0.4 }"
+    >
       <text
         class="y label"
         [attr.x]="leftMargin - innerPadding"
-        [attr.y]="topMargin + (barHeight + innerPadding) * i + (barHeight / 2)"
-        style="pointer-events: none"
+        [attr.y]="yScale(i) + (barHeight / 2)"
       >
         {{ item[1].currencyCode }}
       </text>
 
       <rect
+        class="bar"
+        [@bar]="{ value: true, params: { width: xScale(item[1].total) } }"
         [attr.width]="xScale(item[1].total)"
         [attr.height]="barHeight"
         [attr.x]="leftMargin"
-        [attr.y]="topMargin + (barHeight + innerPadding) * i"
-        style="pointer-events: none"
+        [attr.y]="yScale(i)"
         rx="2"
         ry="2"
-        fill="#b5204b"
       ></rect>
 
       <ng-container
@@ -62,8 +65,7 @@
         <text
           class="v label"
           [attr.x]="leftMargin + xScale(item.total) + innerPadding"
-          [attr.y]="topMargin + (barHeight + innerPadding) * i + (barHeight / 2)"
-          style="pointer-events: none"
+          [attr.y]="yScale(i) + (barHeight / 2)"
         >
           {{ item.totalValue | currency:item.currencySymbol:'symbol' }}
         </text>
@@ -73,22 +75,12 @@
         <text
           class="v label inverse"
           [attr.x]="leftMargin + xScale(item.total) - innerPadding"
-          [attr.y]="topMargin + (barHeight + innerPadding) * i + (barHeight / 2)"
-          style="pointer-events: none"
+          [attr.y]="yScale(i) + (barHeight / 2)"
         >
           {{ item.totalValue | currency:item.currencySymbol:'symbol' }}
         </text>
       </ng-template>
-
-      <rect
-        [attr.width]="width - leftMargin - rightMargin"
-        [attr.height]="barHeight + innerPadding"
-        [attr.idx]="i"
-        [attr.x]="leftMargin"
-        [attr.y]="topMargin + (barHeight + innerPadding) * i - innerPadding / 2"
-        fill="transparent"
-      ></rect>
-    </ng-container>
+    </g>
   </svg>
 
   <hs-popper
@@ -100,8 +92,8 @@
     [shift]="true"
     [offset]="{ mainAxis: 16, crossAxis: 16 }"
   >
-    <table *ngIf="popper.idx >= 0">
-      <div class="title">{{ items[popper.idx]?.[1].currency }}</div>
+    <table *ngIf="0 <= popper.idx && popper.idx < items.length">
+      <div class="title">{{ items[popper.idx][1].currency }}</div>
 
       <tbody>
         <tr *ngFor="let group of items[popper.idx][1].items">
