--- a/web/src/app/components/live-chat/live-chat.scss
+++ b/web/src/app/components/live-chat/live-chat.scss
@@ -4,14 +4,14 @@
   // to prevent overflow
   height: 360px;
 
-  .bars {
+  .scroll {
     position: absolute;
-    max-width: min(100vw, 960px);
     overflow-x: auto;
     overflow-y: hidden;
     top: 0;
-    left: 50%;
-    transform: translateX(-50%);
+    left: 0;
+    right: 0;
+    bottom: 0;
   }
 
   .axis {
@@ -32,6 +32,10 @@
 
   .y.label {
     text-anchor: end;
+  }
+
+  .x.label {
+    text-anchor: middle;
   }
 }
 
