--- a/web/src/app/components/stream-stats-chart/stream-stats-chart.scss
+++ b/web/src/app/components/stream-stats-chart/stream-stats-chart.scss
@@ -2,14 +2,14 @@
   position: relative;
   height: 360px;
 
-  .bars {
+  .scroll {
     position: absolute;
-    max-width: min(100vw, 960px);
     overflow-x: auto;
     overflow-y: hidden;
     top: 0;
-    left: 50%;
-    transform: translateX(-50%);
+    left: 0;
+    right: 0;
+    bottom: 0;
   }
 
   .axis {
@@ -29,6 +29,10 @@
 
   .y.label {
     text-anchor: end;
+  }
+
+  .x.label {
+    text-anchor: middle;
   }
 }
 
