--- a/web/src/app/components/paid-chat-chart/paid-chat-chart.scss
+++ b/web/src/app/components/paid-chat-chart/paid-chat-chart.scss
@@ -39,7 +39,7 @@
 
 .paid-chat-popper {
   position: absolute;
-
+  min-width: 200px;
   color: black;
   border-radius: 4px;
   background: rgb(255, 255, 255);
@@ -47,6 +47,11 @@
   padding-bottom: 8px;
   padding-left: 12px;
   padding-right: 12px;
+
+  table {
+    width: 100%;
+    border: none;
+  }
 
   .title {
     font-size: 11px;
