feat(web): update stream-time-chart

--- a/web/src/app/components/stream-time/_stream-time-theme.scss
+++ b/web/src/app/components/stream-time/_stream-time-theme.scss
@@ -4,14 +4,12 @@
   $is-dark-theme: map-get($theme, "is-dark");
   $foreground: map-get($theme, "foreground");
 
-  .stream-time-tick {
-    fill: mat.get-color-from-palette($foreground, "secondary-text");
+  .stream-time-chart {
+    .label {
+      fill: mat.get-color-from-palette($foreground, "secondary-text");
+    }
   }
 }
 
 @mixin stream-time-typography($config) {
-  .stream-time-tooltip {
-    font-size: mat.font-size($config, "caption");
-    font-weight: mat.font-weight($config, "body-2");
-  }
 }
