--- a/web/src/app/components/stream-time/stream-time.html
+++ b/web/src/app/components/stream-time/stream-time.html
@@ -3,12 +3,46 @@
     <hs-sub-menu-title i18n="@@streamTimes"> Stream Times </hs-sub-menu-title>
   </hs-sub-menu>
 
-  <div
-    class="heatmap"
-    (mouseleave)="_handleMouseleave()"
-    (scroll)="popperComp.hide()"
-  >
-    <div #heatmap (mouseover)="_handleMouseover($event)"></div>
+  <div class="stream-time-chart" (scroll)="closePopper()">
+    <svg
+      #svg
+      [attr.width]="920"
+      [attr.height]="160"
+      holdGesture
+      (hold)="tryOpenPopper($event)"
+      (release)="closePopper()"
+    >
+      <text
+        *ngFor="let tick of yTicks"
+        class="y label"
+        [attr.x]="12"
+        [attr.y]="tick.y"
+      >
+        {{ tick.d | date:'EEEEE' }}
+      </text>
+
+      <rect
+        *ngFor="let day of days"
+        rx="2"
+        ry="2"
+        [attr.width]="16"
+        [attr.height]="16"
+        [attr.x]="day.x"
+        [attr.y]="day.y"
+        [attr.x-date]="day.d"
+        [attr.x-value]="day.v"
+        [attr.fill]="day.c"
+      ></rect>
+
+      <text
+        *ngFor="let tick of xTicks"
+        class="x label"
+        [attr.x]="tick.x"
+        [attr.y]="150"
+      >
+        {{ tick.d | date:'MMM' }}
+      </text>
+    </svg>
   </div>
 
   <hs-popper
@@ -19,13 +53,18 @@
     [offset]="8"
     [arrow]="true"
   >
-    <ng-container *ngIf="!!popper.value; else noStream" i18n="@@streamTimeOn">
-      Stream {{ popper.value | formatDuration }} on {{ popper.date |
-      date:'mediumDate' }}
-    </ng-container>
+    <div *ngIf="0 <= popperIdx && popperIdx < days.length">
+      <ng-container
+        *ngIf="!!days[popperIdx].v; else noStream"
+        i18n="@@streamTimeOn"
+      >
+        Stream {{ days[popperIdx].v | formatDuration }} on {{ days[popperIdx].d
+        | date:'mediumDate' }}
+      </ng-container>
 
-    <ng-template #noStream i18n="@@noStream">
-      No stream on {{ popper.date | date:'mediumDate' }}
-    </ng-template>
+      <ng-template #noStream i18n="@@noStream">
+        No stream on {{ days[popperIdx].d | date:'mediumDate' }}
+      </ng-template>
+    </div>
   </hs-popper>
 </div>
