--- a/web/src/app/components/stream-time/_stream-time-theme.scss
+++ b/web/src/app/components/stream-time/_stream-time-theme.scss
@@ -12,4 +12,8 @@
 }
 
 @mixin stream-time-typography($config) {
+  .stream-time-chart-tooltip {
+    font-size: mat.font-size($config, "caption");
+    font-weight: mat.font-weight($config, "body-2");
+  }
 }
