--- a/web/src/app/components/stream-stats-chart/_stream-stats-chart-theme.scss
+++ b/web/src/app/components/stream-stats-chart/_stream-stats-chart-theme.scss
@@ -30,4 +30,9 @@
       font-weight: mat.font-weight($config, "body-2");
     }
   }
+
+  .stream-stats-chart-tooltip {
+    font-size: mat.font-size($config, "caption");
+    font-weight: mat.font-weight($config, "body-2");
+  }
 }
