--- a/web/src/app/components/stream-stats-chart/stream-stats-chart.scss
+++ b/web/src/app/components/stream-stats-chart/stream-stats-chart.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 .stream-stats-chart {
   position: relative;
   height: 360px;
@@ -44,4 +46,59 @@
 
 .time-unit.selected {
   font-weight: 600;
+}
+
+$arrow-size: 8px;
+
+.stream-stats-chart-tooltip {
+  user-select: none;
+  border: none;
+  color: white;
+  border-radius: 4px;
+  background: rgb(97, 97, 97);
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 8px;
+  padding-right: 8px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  pointer-events: none;
+
+  .hint {
+    color: rgba(255, 255, 255, 0.6);
+  }
+
+  .arrow {
+    position: absolute;
+
+    &,
+    &::before {
+      width: $arrow-size;
+      height: $arrow-size;
+      position: absolute;
+    }
+
+    &::before {
+      content: "";
+      transform: rotate(45deg);
+      background-color: rgb(97, 97, 97);
+    }
+
+    &[data-placement^="top"] {
+      bottom: -#{math.div($arrow-size, 2)};
+    }
+
+    &[data-placement^="bottom"] {
+      top: -#{math.div($arrow-size, 2)};
+    }
+
+    &[data-placement^="left"] {
+      right: -#{math.div($arrow-size, 2)};
+    }
+
+    &[data-placement^="right"] {
+      left: -#{math.div($arrow-size, 2)};
+    }
+  }
 }
