--- a/web/src/app/components/stream-time/stream-time.scss
+++ b/web/src/app/components/stream-time/stream-time.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 .stream-time {
   padding: 0 16px;
 }
@@ -22,5 +24,56 @@
   .y.label {
     text-anchor: start;
     dominant-baseline: central;
+  }
+}
+
+$arrow-size: 8px;
+
+.stream-time-chart-tooltip {
+  user-select: none;
+  border: none;
+  color: white;
+  border-radius: 4px;
+  background: rgb(97, 97, 97);
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 8px;
+  padding-right: 8px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  pointer-events: none;
+
+  .arrow {
+    position: absolute;
+
+    &,
+    &::before {
+      width: $arrow-size;
+      height: $arrow-size;
+      position: absolute;
+    }
+
+    &::before {
+      content: "";
+      transform: rotate(45deg);
+      background-color: rgb(97, 97, 97);
+    }
+
+    &[data-placement^="top"] {
+      bottom: -#{math.div($arrow-size, 2)};
+    }
+
+    &[data-placement^="bottom"] {
+      top: -#{math.div($arrow-size, 2)};
+    }
+
+    &[data-placement^="left"] {
+      right: -#{math.div($arrow-size, 2)};
+    }
+
+    &[data-placement^="right"] {
+      left: -#{math.div($arrow-size, 2)};
+    }
   }
 }
