chore(web): use cdkScrollable

--- a/web/src/app/components/live-chat/live-chat.html
+++ b/web/src/app/components/live-chat/live-chat.html
@@ -35,7 +35,7 @@
     </ng-container>
   </svg>
 
-  <div class="scroll" (scroll)="closeTooltip()">
+  <div class="scroll" cdkScrollable>
     <svg
       #svg
       [attr.width]="width"
